--- a/todo.txt
+++ b/todo.txt
@@ -6,6 +6,8 @@ intent parser
   numbers
   command, then variables
 fix audio output
+silence detection
+wake word detection
 TTS tacotron (faster)
 integrate STT with valid input
 context
