Bible: Fix bugs in OpenPlace/OpenPerson

--- a/app/bible/locale/en/responses.properties
+++ b/app/bible/locale/en/responses.properties
@@ -23,11 +23,11 @@ male_child_of_father=%person% was the son of %father%
 female_child_of_both=%person% was the daughter of %father% and %mother%
 female_child_of_father=%person% was the daughter of %father%
 male_married=He was married with %mate%
-female_married=He was married with %mate%
+female_married=She was married with %mate%
 male_unmarried=and also lived with %mate%
 female_unmarried=and also lived with %mate%
 male_parent_of=He was the father of %child%
-female_parent_of=Sie was the mother of %child%
+female_parent_of=She was the mother of %child%
 male_other_person=He knew %otherPerson%
 female_other_person=She knew %otherPerson%
 male_sibling=He was the brother of %sibling%
