Bible: Say verse numbers for persons

--- a/app/bible/locale/de/responses.properties
+++ b/app/bible/locale/de/responses.properties
@@ -34,8 +34,8 @@ female_places=Sie hielt sich in %places% auf
 male_bible=Die Bibel sagt Folgendes über ihn:
 female_bible=Die Bibel sagt Folgendes über sie:
 
-#bible_verse_header=%bibleBook% %chapter% Vers %verse%:
-bible_verse_header=%bibleBook% %chapter%:
+bible_verse_header=%bibleBook% %chapter% Vers %verse%:
+#bible_verse_header=%bibleBook% %chapter%:
 
 place_parrot=Folgendes weiss ich über %place%:
 place_multiple=Ich habe %count% Orte mit dem Namen %place% gefunden:
