--- a/app/bible/locale/en/responses.properties
+++ b/app/bible/locale/en/responses.properties
@@ -37,8 +37,8 @@ female_places=She stayed in %places%
 male_bible=Here's what the bible says about him:
 female_bible=Here's what the bible says about her:
 
-#bible_verse_header=%bibleBook% %chapter% verse %verse%:
-bible_verse_header=%bibleBook% %chapter%:
+bible_verse_header=%bibleBook% %chapter% verse %verse%:
+#bible_verse_header=%bibleBook% %chapter%:
 
 place_parrot=Here's what I know about %place%:
 place_multiple=I found %count% places with the name %person%:
