Bible: en translation fix

--- a/app/bible/locale/en/appui.properties
+++ b/app/bible/locale/en/appui.properties
@@ -122,7 +122,7 @@ map.layer.routes=Route
 genealogy.rel.father=Father
 genealogy.rel.mother=Mother
 genealogy.rel.married=Married
-genealogy.rel.concubine=Nebenfrau
+genealogy.rel.concubine=Concubine
 genealogy.rel.child=Child
 genealogy.rel.brother=Brother
 genealogy.rel.sister=Sister
